[gd_scene load_steps=6 format=3 uid="uid://cobe1su6w6kvs"]

[ext_resource type="Script" uid="uid://c3p76xktvxtn8" path="res://scripts/asteroids/asteroid_spawner.gd" id="1_l5w2k"]
[ext_resource type="AudioStream" uid="uid://cirkugqpi15qc" path="res://audio/sfx_destruction.wav" id="2_rvfsl"]
[ext_resource type="PackedScene" uid="uid://dvpunn86d3pwq" path="res://scenes/particles/particles_explosion.tscn" id="3_ifpkt"]

[sub_resource type="Curve2D" id="Curve2D_l5w2k"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1260, -739, 0, 0, 0, 0, 1260, -739, 0, 0, 0, 0, 1260, 773, 0, 0, 0, 0, 1249, 776, 0, 0, 0, 0, -1257, 773, 0, 0, 0, 0, -1260, -739)
}
point_count = 6

[sub_resource type="Curve2D" id="Curve2D_yafkd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -384, 0, 0, 0, 0, 0, 0, -192, 0, 0, 0, 0, 384, 0, 0, 0, 0, 0, 0, 192, 0, 0, 0, 0, -384, 0)
}
point_count = 5

[node name="Asteroid Spawner" type="Node2D" groups=["AsteroidSpawner"]]
script = ExtResource("1_l5w2k")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpawnPath" type="Path2D" parent="."]
scale = Vector2(0.124, 0.116)
curve = SubResource("Curve2D_l5w2k")

[node name="SpawnLocation" type="PathFollow2D" parent="SpawnPath"]
position = Vector2(-1260, -739)

[node name="TargetPath" type="Path2D" parent="."]
scale = Vector2(0.124, 0.116)
curve = SubResource("Curve2D_yafkd")

[node name="TargetPosition" type="PathFollow2D" parent="TargetPath"]
position = Vector2(-384, 0)
rotation = -0.4636476

[node name="sfx_destruction" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_rvfsl")

[node name="particles_explosion" parent="." instance=ExtResource("3_ifpkt")]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
